--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aagaur Studio - Sustainable Architecture & Design Studio</title>
+    <title>Swaranjali - Luxury Hotel & Resort</title>
     <meta
       name="description"
-      content="At Aagaur Studio, we are passionate about sustainable architecture, interior design, and crafting exquisite products. We seamlessly integrate eco-conscious principles into every project while celebrating traditional craftsmanship."
+      content="At Swaranjali, we are passionate about sustainable architecture, interior design, and crafting exquisite products. We seamlessly integrate eco-conscious principles into every project while celebrating traditional craftsmanship."
     />
     <meta
       name="keywords"
@@ -32,13 +32,13 @@
     <!-- Open Graph tags for social sharing -->
     <meta
       property="og:title"
-      content="Aagaur Studio - Where Design Meets Sustainability"
+      content="Swaranjali - Luxury Hotel & Resort"
     />
     <meta
       property="og:description"
-      content="Discover Aagaur Studio's innovative approach to sustainable architecture, interior design, and artisanal crafts. Join us in creating spaces that inspire and endure."
+      content="Discover Swaranjali's innovative approach to luxury hotel & resort. Join us in creating spaces that inspire and endure."
     />
-    <meta property="og:url" content="https://aagaurstudio.com" />
+    <meta property="og:url" content="https://swaranjali.com" />
     <meta property="og:type" content="website" />
   </head>
   <body>
@@ -59,14 +59,14 @@
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "@id": "https://aagaurstudio.com",
-        "name": "Aagaur Studio",
-        "url": "https://aagaurstudio.com",
-        "logo1": "https://aagaurstudio.com/landing_logo1.png",
-        "description": "At Aagaur Studio, we are passionate about sustainable architecture, interior design, and crafting exquisite products that elevate spaces while contributing to a better world. Our commitment to sustainability guides our design ethos and business practices.",
+        "@id": "https://swaranjali.com",
+        "name": "Swaranjali",
+        "url": "https://swaranjali.com",
+        "logo1": "https://swaranjali.com/landing_logo1.png",
+        "description": "At Swaranjali, we are passionate about sustainable architecture, interior design, and crafting exquisite products that elevate spaces while contributing to a better world. Our commitment to sustainability guides our design ethos and business practices.",
         "sameAs": [
-          "https://www.instagram.com/aagaurstudio",
-          "https://www.linkedin.com/company/aagaur-studio"
+          "https://www.instagram.com/swaranjali",
+          "https://www.linkedin.com/company/swaranjali"
         ],
         "address": {
           "@type": "PostalAddress",
@@ -75,8 +75,8 @@
         },
         "subOrganization": {
           "@type": "Organization",
-          "name": "Aagaur Crafts",
-          "description": "Product design section of Aagaur Studio, collaborating with skilled artisans from across Madhya Pradesh and India to create sustainable and contemporary pieces that celebrate traditional craftsmanship."
+          "name": "Swaranjali",
+          "description": "Product design section of Swaranjali, collaborating with skilled artisans from across Madhya Pradesh and India to create sustainable and contemporary pieces that celebrate traditional craftsmanship."
         }
       }
     </script>
